package com.company;

    //usa-se extends para herança p/ conta
public class Poupanca extends Conta{
    private int diaAniversario;

    public int getDiaAniversario() {
        return diaAniversario;
    }

    public void setDiaAniversario(int diaAniversario) {
        this.diaAniversario = diaAniversario;
    }
}
