@startuml

title __18-PROJETOBANCO-FEITOEMAULA's Class Diagram__\n

  namespace com.company {
    abstract class com.company.Conta {
    }
  }
  

  namespace com.company {
    class com.company.Corrente {
    }
  }
  

  namespace com.company {
    class com.company.GerenciarContass {
    }
  }
  

  namespace com.company {
    class com.company.GerenciarPatrimonioBanco {
    }
  }
  

  namespace com.company {
    class com.company.Poupanca {
    }
  }
  

  com.company.Corrente -up-|> com.company.Conta
  com.company.Poupanca -up-|> com.company.Conta


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
